--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ description: A Flutter demo using the Twitch API.
 dependencies:
   flutter:
     sdk: flutter
-  twitch: 0.3.1
+  twitch:
+    path: ../../lab/twitch.dart
   url_launcher: "^0.4.2+1"
 
 flutter:
