--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ dependencies:
     sdk: flutter
   twitch:
     path: ../../lab/twitch.dart
-  url_launcher: "^0.4.2+1"
+  flutter_webview_plugin: "^0.0.3"
 
 flutter:
   uses-material-design: true
