--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ description: A Flutter demo using the Twitch API.
 dependencies:
   flutter:
     sdk: flutter
-  twitch: ^0.3.0
+  twitch: 0.3.1
+  url_launcher: "^0.4.2+1"
 
 flutter:
   uses-material-design: true
